--- a/Draw/BBS/Controller/CreatePostController~ipad.xib
+++ b/Draw/BBS/Controller/CreatePostController~ipad.xib
@@ -40,8 +40,8 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="189223004">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{320, 460}</string>
+						<int key="NSvFlags">256</int>
+						<string key="NSFrameSize">{768, 1024}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="399887529"/>
@@ -56,10 +56,45 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUILabel" id="735297713">
+								<reference key="NSNextResponder" ref="399887529"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{168, 26}, {432, 78}}</string>
+								<reference key="NSSuperview" ref="399887529"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="656786294"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Label</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEAA</bytes>
+									<object class="NSColorSpace" key="NSCustomColorSpace">
+										<int key="NSID">1</int>
+									</object>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUITextAlignment">1</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">1</int>
+									<double key="pointSize">17</double>
+								</object>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">17</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+							</object>
 							<object class="IBUIImageView" id="173573302">
 								<reference key="NSNextResponder" ref="399887529"/>
-								<int key="NSvFlags">276</int>
-								<string key="NSFrame">{{20, 55}, {280, 340}}</string>
+								<int key="NSvFlags">272</int>
+								<string key="NSFrame">{{48, 122}, {672, 756}}</string>
 								<reference key="NSSuperview" ref="399887529"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="446010930"/>
@@ -75,7 +110,7 @@
 							<object class="IBUITextView" id="446010930">
 								<reference key="NSNextResponder" ref="399887529"/>
 								<int key="NSvFlags">276</int>
-								<string key="NSFrame">{{20, 55}, {280, 340}}</string>
+								<string key="NSFrame">{{48, 122}, {672, 756}}</string>
 								<reference key="NSSuperview" ref="399887529"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="182883062"/>
@@ -105,7 +140,7 @@
 							<object class="IBUIButton" id="934006334">
 								<reference key="NSNextResponder" ref="399887529"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 16}, {30, 27}}</string>
+								<string key="NSFrame">{{48, 35}, {72, 60}}</string>
 								<reference key="NSSuperview" ref="399887529"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="735297713"/>
@@ -143,7 +178,7 @@
 							<object class="IBUIButton" id="656786294">
 								<reference key="NSNextResponder" ref="399887529"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{263, 18}, {40, 24}}</string>
+								<string key="NSFrame">{{613, 40}, {96, 53}}</string>
 								<reference key="NSSuperview" ref="399887529"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="173573302"/>
@@ -176,7 +211,7 @@
 							<object class="IBUIButton" id="453295058">
 								<reference key="NSNextResponder" ref="399887529"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{227, 406}, {24, 23}}</string>
+								<string key="NSFrame">{{544, 910}, {57, 51}}</string>
 								<reference key="NSSuperview" ref="399887529"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="60379430"/>
@@ -201,9 +236,10 @@
 							<object class="IBUIButton" id="60379430">
 								<reference key="NSNextResponder" ref="399887529"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{275, 406}, {24, 23}}</string>
+								<string key="NSFrame">{{660, 910}, {57, 51}}</string>
 								<reference key="NSSuperview" ref="399887529"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -225,7 +261,7 @@
 							<object class="IBUIButton" id="182883062">
 								<reference key="NSNextResponder" ref="399887529"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{22, 406}, {50, 23}}</string>
+								<string key="NSFrame">{{52, 910}, {120, 51}}</string>
 								<reference key="NSSuperview" ref="399887529"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="453295058"/>
@@ -236,11 +272,11 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<double key="IBUITitleEdgeInsets.top">0.0</double>
 								<double key="IBUITitleEdgeInsets.bottom">0.0</double>
-								<double key="IBUITitleEdgeInsets.left">-27</double>
+								<double key="IBUITitleEdgeInsets.left">-60</double>
 								<double key="IBUITitleEdgeInsets.right">0.0</double>
 								<double key="IBUIImageEdgeInsets.top">0.0</double>
 								<double key="IBUIImageEdgeInsets.bottom">0.0</double>
-								<double key="IBUIImageEdgeInsets.left">31</double>
+								<double key="IBUIImageEdgeInsets.left">74</double>
 								<double key="IBUIImageEdgeInsets.right">0.0</double>
 								<string key="IBUINormalTitle">悬赏</string>
 								<reference key="IBUIHighlightedTitleColor" ref="601660250"/>
@@ -268,43 +304,8 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUILabel" id="735297713">
-								<reference key="NSNextResponder" ref="399887529"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{70, 12}, {180, 35}}</string>
-								<reference key="NSSuperview" ref="399887529"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="656786294"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Label</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAxIDEAA</bytes>
-									<object class="NSColorSpace" key="NSCustomColorSpace">
-										<int key="NSID">1</int>
-									</object>
-								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<int key="IBUITextAlignment">1</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
-									<double key="pointSize">17</double>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">17</double>
-									<int key="NSfFlags">16</int>
-								</object>
-								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-							</object>
 						</array>
-						<string key="NSFrameSize">{320, 460}</string>
+						<string key="NSFrameSize">{768, 1024}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="934006334"/>
@@ -313,7 +314,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+				<string key="NSFrame">{{0, 20}, {768, 1024}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="189223004"/>
@@ -510,8 +511,8 @@
 							<reference ref="182883062"/>
 							<reference ref="656786294"/>
 							<reference ref="934006334"/>
-							<reference ref="735297713"/>
 							<reference ref="453295058"/>
+							<reference ref="735297713"/>
 							<reference ref="60379430"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
@@ -568,7 +569,7 @@
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="2" key="23.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
+				<real value="1" key="23.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
 				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
